--- a/Python/Python.html
+++ b/Python/Python.html
@@ -165,22 +165,23 @@
             <div class="week-card">
                 <h3>Part 1: The Basics</h3>
                 <ul class="day-list">
-                    <li class="day-item"><span class="day-label">1</span><div class="day-content"><strong>Setup:</strong> VS Code, Python 3.12+. Write "Hello World" and learn Variables (Integers, Strings, Booleans).</div></li>
-                    <li class="day-item"><span class="day-label">2</span><div class="day-content"><strong>Math:</strong> Operators (+, -, *, /, //, %) and F-Strings (how to put variables inside text).</div></li>
-                    <li class="day-item"><span class="day-label">3</span><div class="day-content"><strong>Logic:</strong> Conditionals (if, elif, else) and Logic Operators (and, or, not).</div></li>
-                    <li class="day-item"><span class="day-label">4</span><div class="day-content"><strong>Lists:</strong> Creating, adding, removing, and "slicing" them.</div></li>
-                    <li class="day-item"><span class="day-label">5</span><div class="day-content"><strong>Loops P1:</strong> for loops (Iterating through lists).</div></li>
-                    <li class="day-item"><span class="day-label">6</span><div class="day-content"><strong>Loops P2:</strong> while loops and the range() function.</div></li>
-                    <li class="day-item"><span class="day-label">7</span><div class="day-content"><strong>Review:</strong> Build a script that plays "FizzBuzz" or a simple "Guess the Number" game.</div></li>
+                    <li class="day-item"><span class="day-label">1</span><div class="day-content"><strong>Setup:</strong> Variables, Typecasting, and User Input(CONSOLE)</div></li>
+                    <li class="day-item"><span class="day-label">2</span><div class="day-content"><strong>Math:</strong> Operators (+, -, *, /, //, %)</div></li>
+                    <li class="day-item"><span class="day-label">3</span><div class="day-content"><strong>Logic:</strong> Conditionals (if, elif, else), Logical Operators (and, or, not), and Conditional Expressions</div></li>
+                    <li class="day-item"><span class="day-label">4</span><div class="day-content"><strong>Loops P1:</strong> while loops</div></li>
+                    <li class="day-item"><span class="day-label">5</span><div class="day-content"><strong>Loops P2:</strong> for loops, nested loops, and the range() function</div></li>
+                    <li class="day-item"><span class="day-label">6</span><div class="day-content"><strong>Lists, Sets, and Tuples:</strong> Lists, Sets, and Tuples</div></li>
+                    <li class="day-item"><span class="day-label">7 Part1</span><div class="day-content"><strong>Strings:</strong> String Methods, Indexing, and Format Specifiers</div></li>
+                    <li class="day-item"><span class="day-label">7 Part2</span><div class="day-content"><strong>Review:</strong> Build a script that plays a simple "Guess the Number" game</div></li>
                 </ul>
             </div>
 
             <div class="week-card">
                 <h3>Part 2: Functions & Data</h3>
                 <ul class="day-list">
-                    <li class="day-item"><span class="day-label">1</span><div class="day-content"><strong>Dictionaries:</strong> Key-Value pairs. This is how you'll store complex data later.</div></li>
-                    <li class="day-item"><span class="day-label">2</span><div class="day-content"><strong>Tuples & Sets:</strong> Learn why they are different from Lists (immutability).</div></li>
-                    <li class="day-item"><span class="day-label">3</span><div class="day-content"><strong>Functions 101:</strong> Defining them, calling them, and passing "Arguments."</div></li>
+                    <li class="day-item"><span class="day-label">1</span><div class="day-content"><strong>2D Collections and Dictionaries:</strong> Spreadsheets and Key-Value pairs. This is how you'll store complex data later.</div></li>
+                    <li class="day-item"><span class="day-label">2</span><div class="day-content"><strong>Random Numbers:</strong> Random Numbers.</div></li>
+                    <li class="day-item"><span class="day-label">3</span><div class="day-content"><strong>Functions:</strong> Defining them, calling them, and passing "Arguments."</div></li>
                     <li class="day-item"><span class="day-label">4</span><div class="day-content"><strong>Return Values:</strong> Understanding how to get data out of a function.</div></li>
                     <li class="day-item"><span class="day-label">5</span><div class="day-content"><strong>Scope:</strong> Why a variable created inside a function doesn't exist outside of it.</div></li>
                     <li class="day-item"><span class="day-label">6</span><div class="day-content"><strong>List Comprehensions:</strong> This is the "Pythonic" way to make lists fast.</div></li>
