Completed section 2 of part 1(lesson and practice)

--- a/Python/Python.html
+++ b/Python/Python.html
@@ -166,7 +166,7 @@
                 <h3>Part 1: The Basics</h3>
                 <ul class="day-list">
                     <li class="day-item"><span class="day-label">1</span><div class="day-content"><strong>Setup:</strong> Variables, Typecasting, and User Input(CONSOLE)</div></li>
-                    <li class="day-item"><span class="day-label">2</span><div class="day-content"><strong>Math:</strong> Operators (+, -, *, /, //, %)</div></li>
+                    <li class="day-item"><span class="day-label">2</span><div class="day-content"><strong>Math:</strong> Operators (+, -, *, /, //, %) and Math Functions</div></li>
                     <li class="day-item"><span class="day-label">3</span><div class="day-content"><strong>Logic:</strong> Conditionals (if, elif, else), Logical Operators (and, or, not), and Conditional Expressions</div></li>
                     <li class="day-item"><span class="day-label">4</span><div class="day-content"><strong>Loops P1:</strong> while loops</div></li>
                     <li class="day-item"><span class="day-label">5</span><div class="day-content"><strong>Loops P2:</strong> for loops, nested loops, and the range() function</div></li>
